--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     <p>Vergessene NS Architektur</p>
   <p>Ausstellung in der Stube, Barfüßerstraße 8, ab 23.Januar 2026</p>
     <p></p>
-  <p>Betrachten Sie das Mannschaftshaus der Somme-Kaserne als 3D Modell in Augmented Reality:</p>
+  <p>Betrachten Sie die geplante Adolg-Hitler-Schule am Hesselberg als 3D Modell in Augmented Reality:</p>
   </div>
 
   <model-viewer
-    src="Manhaus.glb"
+    src="AHS.glb"
     alt="3D-Modell von Mannschaftshaus"
     auto-rotate
     camera-controls
