--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <model-viewer
     src="AHS.glb"
-    alt="3D-Modell von Mannschaftshaus"
+    alt="3D-Modell von Adolf-Hitler-Schule"
     auto-rotate
     camera-controls
     ar
