--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <model-viewer
-    src="AHS.glb"
+    src="AHS Hesselberg.glb"
     alt="3D-Modell von Adolf-Hitler-Schule"
     auto-rotate
     camera-controls
